force-app/main/default/objects/Script__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <label>Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Scripts</relationshipLabel>
    <relationshipName>Scripts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>