force-app/main/default/objects/Script__c/fields/Number_of_Actors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Actors__c</fullName>
    <label>Number of Actors</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>