force-app/main/default/objects/Script__c/fields/Price_Per_Hour__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Hour__c</fullName>
    <label>Price Per Hour</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>