force-app/main/default/objects/Script__c/fields/Roles_List__c.field-meta.xml
<CustomField>
    <fullName>Roles_List__c</fullName>
    <label>Roles List</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Acting_Roles</valueSetName>
    </valueSet>
</CustomField>